# metran

./: .gitignore  .readthedocs.yml  LICENSE  README.md  factoranalysis.py  kalmanfilter.py  metran.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  solver.py  test.py
.github/workflows/: ci.yml  ci_notebooks.yml
docs/: concepts.rst  conf.py  examples.rst  getting_started.rst  index.rst  modules.rst
docs/concepts/: dynamic_factor_models.nblink
docs/examples/: ex01_metran_practical_example.nblink  ex02_pastas_metran_example.nblink
examples/: dynamic_factor_model.ipynb  ex01_multiple_timeseries_analysis.ipynb  example_script.py  metran_practical_example.ipynb  pastas_metran_example.ipynb
examples/data/: B21B0214001_1.csv  B21B0214001_res.csv  B21B0214002_1.csv  B21B0214002_res.csv  B21B0214003_1.csv  B21B0214003_res.csv  B21B0214004_1.csv  B21B0214004_res.csv  B21B0214005_1.csv  B21B0214005_res.csv  RD_338.csv
fortran/: KalmanFilter.f95
metran/: __init__.py  factoranalysis.py  kalmanfilter.py  metran.py  plots.py  solver.py  utils.py  version.py
tests/: conftest.py  test_factoranalysis.py  test_import.py  test_metran.py  test_notebooks.py  test_plots.py
